--- a/示例/清除浮动.html
+++ b/示例/清除浮动.html
@@ -10,8 +10,9 @@
             height: 200px;
             border: 1px solid red;
         }
-        .parent-one{
-            border:1px solid yellow;
+
+        .parent-one {
+            border: 1px solid yellow;
         }
 
         .child-two {
@@ -35,7 +36,8 @@
             visibility: hidden;
         }
 
-        .clearfix\9 {
+        .clearfix \9
+        {
             display: inline-block;
         }
 
